# pm

./: .gitignore  .prettierrc.js  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.prod.json
components/: Nav.tsx  Page.tsx
lib/: environment.ts
next/lib/modules/: github.ts
pages/: index.tsx
pm-client/: package-lock.json  package.json
pm-server/: Cargo.toml  README.md  rust-toolchain.toml
pm-server/script/: dev
pm-server/src/: database.rs  lib.rs  main.rs  projects.rs  responses.rs
styles/: globals.css
